Update installFlyway.groovy